--- a/Views/Urun/Index.cshtml
+++ b/Views/Urun/Index.cshtml
@@ -43,7 +43,7 @@
 @Html.PagedListPager((IPagedList)Model, sayfa => Url.Action("Index", new { sayfa }))
 
 <br />
-<a href="/Urun/YeniUrun" class="btn btn-primary">YENİ ÜRÜN EKLE</a>
+<a href="/Urun/YeniUrun" class="btn btn-primary">YENİ ÜRÜN EKLEME</a>
 
 
 
